--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       font-family: 'Sono', sans-serif;
     }
 
+    .pricing-container {
+        display: flex;
+        border: 5px solid red;
+        height: 100vh;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .plan-features > li {
+        list-style-type: none;
+    }
+
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
       
