--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Sono', sans-serif;
-      height: 100vh;
-      
+      font-family: 'Sono', sans-serif;  
     }
 
     .pricing-container {
-        height: 100%;
        display: flex;
+       justify-content: center;
        align-items: center;
-       justify-content: space-around;
+       height: 100vh;
+       gap: 2rem;
     }
 
     .pricing-plan {
-        display: flex;
-        flex-direction: column;
+        flex: 1;
         text-align: center;
-        gap: 10px;
-        flex-basis: 30%;
+        max-width: 400px;
+        padding: 20px;
         background-color: pink;
         border-radius: 2%;
     }
@@ -33,50 +31,35 @@
     .plan-title {
         font-weight: 800;
         font-size: 1.5rem;
+        margin-bottom: 10px;
     }
 
     .plan-price {
         font-style: italic;
         font-size: 2rem;
+        margin-bottom: 10px;
     }
     
-    .plan-features > li {
+    .plan-features {
         list-style-type: none;
-       padding: 5px;
-       font-size: 1rem;
+       padding: 0;
+       margin: 0;
     }
 
     .plan-button {
-        width: 20%;
-        align-self: center;
+        padding: 10px;
         border: none;
         border-radius: 10%;
-        margin-bottom: 10px;
-        padding: 5px 10px;
         color: rgb(240, 93, 117);
         background-color: rgb(240, 214, 218);
+        margin-top: 20px;
     }
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
       .pricing-container {
-        display: flex;
         flex-direction: column;
-        gap: 10px;
-      }
-
-      .pricing-plan {
-        width: 55%;
-        height: 40%;
-        padding: 10px;
-      }
-
-      .plan-features > li {
-        padding: 0;
-      }
-
-      .plan-button{
-        width: 30%;
+        height: 100%;
       }
     }
   </style>
